--- a/style/style.css
+++ b/style/style.css
@@ -1,82 +1,151 @@
 body {
   background-color: black;
-  font-family: "poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
   color: azure;
+  margin: 0;
+  padding: 0;
   display: flex;
-  justify-content: space-between;
 }
-header {
-  padding: 50px;
+
+.logo {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 20px 50px;
 }
-/*nav {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  padding: 50px;
+
+.icon {
+  display: none;
+  font-size: 28px;
+  color: white;
+  cursor: pointer;
 }
-ul {
-  list-style: none;
-  display: flex;
-}*/
 
 .linkbuttons {
-  font-weight: bold;
-  font-size: 20px;
-  display: flex;
-  list-style: none;
-  padding-right: 80px;
-}
-.linkbuttons ul {
-  justify-content: left;
-  gap: 10%;
   list-style: none;
   display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
 }
-a {
+
+.linkbuttons a {
   text-decoration: none;
   color: azure;
+  font-size: 18px;
+  padding: 10px;
 }
+
 .secondpart {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 50px;
+  gap: 20px;
 }
+
 .text {
   max-width: 50%;
 }
-img {
-  padding-top: 50px;
-  padding-right: 200px;
-}
+
 .musician {
   font-size: 55px;
 }
-.reponsivenav {
-  font-size: 24px;
-  background: none;
-  border: none;
-  color: azure;
-  cursor: pointer;
+
+picture img {
+  width: 100%;
+  max-width: 500px;
+  height: auto;
 }
-@media (max-width: 800px) {
-  .reponsivenav {
+
+.linkbuttons li a:hover {
+  color: #ffcc00;
+}
+
+.menu-toggle {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .icon {
     display: block;
   }
-  .secondpart {
+
+  .linkbuttons {
+    display: none;
     flex-direction: column;
+    position: absolute;
+    background-color: black;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    padding: 16px;
+    z-index: 10;
+  }
+
+  .menu-toggle:checked + .icon + .linkbuttons {
+    display: flex;
+  }
+
+  .secondpart {
     text-align: center;
   }
+
   .text {
     max-width: 100%;
     margin-bottom: 20px;
   }
-  .linkbuttons {
-    flex-direction: column;
+
+  img {
+    max-width: 300px;
+    padding-left: 50px;
+  }
+
+  p {
     text-align: center;
-    gap: 10px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .icon {
+    display: block;
+  }
+
+  .linkbuttons {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    background-color: black;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    padding: 16px;
+    z-index: 10;
+  }
+
+  .menu-toggle:checked + .icon + .linkbuttons {
+    display: flex;
+  }
+
+  .secondpart {
+    text-align: center;
+  }
+
+  .text {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+
+  picture img {
+    max-width: 80%;
+    padding-left: 50px;
+  }
+
+  p {
+    text-align: center;
+  }
+
+  body {
+    flex-direction: column;
   }
 }
